[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "qcio"
version = "0.5.0"
description = "Beautiful and user friendly data structures for quantum chemistry."
authors = ["Colton Hicks <github@coltonhicks.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = ">=2.0.0"
numpy = ">=1.20"
toml = "^0.10.2"
pyyaml = "^6.0"
typing-extensions = "^4.7.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.1.1"
pytest = "^7.2.2"
pre-commit = "^3.2.1"
pytest-cov = "^4.0.0"
ruff = "^0.0.260"
isort = "^5.12.0"
qcelemental = ">=0.26.0"
types-toml = "^0.10.8.6"
types-pyyaml = "^6.0.12.10"

[tool.black]
line-length = 88

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.ruff]
line-length = 88
isort = { known-first-party = ["qcio", "tests"] }
target-version = "py38"

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "*__init__.py"]

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
