[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "qcio"
version = "0.11.0"
description = "Beautiful and user friendly data structures for quantum chemistry."
authors = ["Colton Hicks <github@coltonhicks.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/coltonbh/qcio"
homepage = "https://github.com/coltonbh/qcio"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.0.0,!=2.0.1,!=2.1.0"
numpy = "^1.20"
toml = "^0.10.2"
pyyaml = "^6.0"
typing-extensions = "^4.7.1"
rdkit = { version = ">=2022.3.3", optional = true }
matplotlib = { version = ">=3.0.0", optional = true }
ipython = { version = ">=8.0.0", optional = true }
py3Dmol = { version = ">=2.2.1", optional = true }

[tool.poetry.extras]
rdkit = ["rdkit"]
view = ["matplotlib", "ipython", "py3Dmol"]

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
mypy = "^1.1.1"
pytest = "^7.2.2"
pre-commit = "^3.2.1"
pytest-cov = "^4.0.0"
ruff = "^0.0.260"
isort = "^5.12.0"
qcelemental = ">=0.26.0"
types-toml = "^0.10.8.6"
types-pyyaml = "^6.0.12.10"
rdkit = ">=2022.3.3"
rdkit-stubs = "^0.7"

[tool.black]
line-length = 88

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.ruff]
line-length = 88
isort = { known-first-party = ["qcio", "tests"] }
target-version = "py38"

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "*__init__.py"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::FutureWarning"]

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
