[project]
name = "qcio"
version = "0.16.0"
description = "Beautiful and user friendly data structures for quantum chemistry."
readme = "README.md"
authors = [{ name = "Colton Hicks", email = "github@coltonhicks.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["quantum-chemistry", "data-structures", "cheminformatics"]
dependencies = [
    "pydantic>=2.0.0, !=2.0.1, !=2.1.0",
    "numpy>=1.20",
    "toml>=0.10.2",
    "pyyaml>=6.0",
    "typing-extensions>=4.7.1",
    "eval-type-backport>=0.2.0",
    "qcconst>=0.2.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://github.com/coltonbh/qcio"
Documentation = "https://qcio.coltonhicks.com"
Source = "https://github.com/coltonbh/qcio"
Changelog = "https://github.com/coltonbh/qcio/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/coltonbh/qcio/issues"
repository = "https://github.com/coltonbh/qcio"


[project.optional-dependencies]
view = [
    "matplotlib>=3.0.0",
    "ipython>=8.0.0",
    "py3Dmol>=2.2.1",
    "rdkit>=2022.3.3",
    "qcinf>=0.1.1",
]
all = [
    "matplotlib>=3.0.0",
    "ipython>=8.0.0",
    "py3Dmol>=2.2.1",
    "rdkit>=2022.3.3",
    "qcinf>=0.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.10.1",
    "mypy>=1.1.1",
    "pytest>=7.2.2",
    "pre-commit>=3.2.1",
    "pytest-cov>=4.0.0",
    "qcelemental>=0.26.0",
    "types-toml>=0.10.8.6",
    "types-pyyaml>=6.0.12.10",
    "rdkit>=2022.9.5",
    "jupyterlab>=4.2.4",
    "matplotlib>=3.0.0",
    "py3Dmol>=2.2.1",
    "pint>=0.24.4",
    "qcinf>=0.1.1",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.30",
    "markdown-include>=0.8.1",
    "pymdown-extensions>=10.8.1",
    "mkdocstrings[python]>=0.25.2",
    "mkdocs-exclude>=1.0.2",
    "mknotebooks>=0.8.0",
]

[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"


[tool.ruff.lint]
isort = { known-first-party = ["qcio", "tests"] }
select = ["I", "F401"]

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "*__init__.py"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::FutureWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
